--- a/package.json
+++ b/package.json
@@ -12,19 +12,27 @@
     "@hookform/resolvers": "^4.1.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.3.1",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-google-maps/api": "^2.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
+    "i": "^0.3.7",
     "lucide-react": "^0.475.0",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "npm": "^11.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
+    "react-google-autocomplete": "^2.7.4",
     "react-hook-form": "^7.54.2",
     "react-query": "^3.39.3",
     "react-toastify": "^11.0.3",
