--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-form-data": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
