Add uuidv4 dependency, update Property model to include coordinates and media URLs, and enhance PropertyForm for file uploads

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuidv4": "^6.2.13",
     "zod": "^3.24.2",
     "zod-form-data": "^2.0.5"
   },
