--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "react-dropzone": "^14.3.5",
     "react-google-autocomplete": "^2.7.4",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-query": "^3.39.3",
-    "react-toastify": "^11.0.3",
+    "react-simple-star-rating": "^5.1.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
