--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "embla-carousel-react": "^8.5.2",
     "i": "^0.3.7",
     "lucide-react": "^0.475.0",
     "next": "^14.2.24",
