--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
-    "embla-carousel-react": "^8.5.2",
     "i": "^0.3.7",
     "lucide-react": "^0.475.0",
     "next": "^14.2.24",
@@ -38,6 +37,7 @@
     "react-hot-toast": "^2.5.2",
     "react-query": "^3.39.3",
     "react-simple-star-rating": "^5.1.7",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
