--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "date-fns": "^3.6.0",
     "i": "^0.3.7",
     "lucide-react": "^0.475.0",
     "next": "^14.2.24",
@@ -30,6 +31,7 @@
     "next-themes": "^0.4.4",
     "npm": "^11.1.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-google-autocomplete": "^2.7.4",
