--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@react-google-maps/api": "^2.20.6",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
@@ -36,6 +36,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-google-autocomplete": "^2.7.4",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-query": "^3.39.3",
