--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@tabler/icons-react": "^3.30.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
-    "i": "^0.3.7",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
+    "motion": "^12.4.7",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
@@ -52,8 +58,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
