--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@react-three/drei": "^9",
+    "@react-three/fiber": "8.2.2",
     "@tabler/icons-react": "^3.30.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
@@ -29,6 +31,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
+    "dotted-map": "^2.2.3",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
@@ -51,6 +54,8 @@
     "recoil": "^0.7.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
+    "three-globe": "^2.41.0",
     "uuidv4": "^6.2.13",
     "zod": "^3.24.2",
     "zod-form-data": "^2.0.5"
@@ -60,6 +65,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.173.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
