Update environment configuration for development and production with new database and API URLs

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,6 @@ GOOGLE_CLIENT_ID= 871970980300-9n3bejmlrunpna39go5ursvom754nh63.apps.googleuserc
 GOOGLE_CLIENT_SECRET= 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 
 DATABASE_URL=postgresql://lala:JUuzQ2qQOjYoi52Cm4KZkffd9lW6UdNP@dpg-cut4rilsvqrc73e4b320-a.oregon-postgres.render.com/rentality
 NEXTAUTH_SECRET=lala@132fdafa$$@@%^gfsFDALK
-NEXTAUTH_URL=https://rentality.vercel.app/api/auth
+NEXTAUTH_URL=https://rentality.onrender.com/api/auth
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyCD0WBCbJ9cpZG6haOXPQ_eKrXXqu7Ztic
-BASE_URL=https://rentality.vercel.app
+BASE_URL=https://rentality.onrender.com
