--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 GOOGLE_CLIENT_ID= 871970980300-9n3bejmlrunpna39go5ursvom754nh63.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET= 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 
-DATABASE_URL=postgresql://postgres:lala^123%@localhost:5432/rentality
+DATABASE_URL=postgresql://lala:JUuzQ2qQOjYoi52Cm4KZkffd9lW6UdNP@dpg-cut4rilsvqrc73e4b320-a.oregon-postgres.render.com/rentality
 NEXTAUTH_SECRET=lala@132fdafa$$@@%^gfsFDALK
-NEXTAUTH_URL=http://localhost:3000/api/auth
+NEXTAUTH_URL=https://rentality.vercel.app/api/auth
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyCD0WBCbJ9cpZG6haOXPQ_eKrXXqu7Ztic
-BASE_URL=http://localhost:3000
+BASE_URL=https://rentality.vercel.app
