--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "motion": "^12.4.7",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "npm": "^11.1.0",
     "react": "^18",
