Add Cloudinary dependency and update environment configurations

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,6 @@ NEXTAUTH_SECRET=lala@132fdafa$$@@%^gfsFDALK
 NEXTAUTH_URL=https://rentality.vercel.app/api/auth
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyCD0WBCbJ9cpZG6haOXPQ_eKrXXqu7Ztic
 BASE_URL=https://rentality.vercel.app
+CLOUDINARY_CLOUD_NAME=doubfwhsl
+CLOUDINARY_API_KEY=684622729676715
+CLOUDINARY_API_SECRET=L9kbweaxrPIam2MiHbDPF2DWmAQ
