--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tsparticles/slim": "^3.8.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
